force-app/main/default/objects/CodeScan_Organization__c/CodeScan_Organization__c.object-meta.xml
<CustomObject>
    <label>Cloud Organization</label>
    <nameField>
        <label>CodeScan Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Organizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>