force-app/main/default/objects/CodeScan_Organization__c/fields/AEP_License__c.field-meta.xml
<CustomField>
    <fullName>AEP_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to indicate that cloud org is a SFAEP free org</description>
    <label>AEP License</label>
    <type>Checkbox</type>
</CustomField>