force-app/main/default/objects/CodeScan_Organization__c/fields/App_Link__c.field-meta.xml
<CustomField>
    <fullName>App_Link__c</fullName>
    <label>App Link</label>
    <type>Url</type>
</CustomField>