force-app/main/default/objects/CodeScan_Organization__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>