force-app/main/default/objects/CodeScan_Organization__c/fields/Count_of_Cloud_Members__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Cloud_Members__c</fullName>
    <label>Count of Cloud Members</label>
    <summaryForeignKey>CodeScan_User__c.Organization__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>