force-app/main/default/objects/CodeScan_Organization__c/fields/Ide_Count__c.field-meta.xml
<CustomField>
    <fullName>Ide_Count__c</fullName>
    <label>IDE Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>