force-app/main/default/objects/CodeScan_Organization__c/fields/Last_Member_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Member_Login__c</fullName>
    <label>Last Member Login</label>
    <summarizedField>CodeScan_User__c.LastLogin__c</summarizedField>
    <summaryForeignKey>CodeScan_User__c.Organization__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>