force-app/main/default/objects/CodeScan_Organization__c/fields/Loc__c.field-meta.xml
<CustomField>
    <fullName>Loc__c</fullName>
    <label>LOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>