force-app/main/default/objects/CodeScan_Organization__c/fields/Public_Projects__c.field-meta.xml
<CustomField>
    <fullName>Public_Projects__c</fullName>
    <label>Public Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>