force-app/main/default/objects/CodeScan_Organization__c/fields/Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Team_Size__c</fullName>
    <label>Team Size</label>
    <summaryForeignKey>CodeScan_User__c.Organization__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>