force-app/main/default/objects/CodeScan_Organization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CodeScan_Org_Id__c</columns>
    <columns>Key__c</columns>
    <columns>Last_Member_Login__c</columns>
    <columns>Loc__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Trial_Ends__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Count_of_Cloud_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>